# java-experimentation

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  commands  package-lock.json  package.json
src/dev/wsollers/: Main.java
src/main/java/dev/wsollers/: Main.java
src/main/java/dev/wsollers/advent/: AdventTask.java
src/main/java/dev/wsollers/advent/year2023/day1/: Challenge1.java
src/main/java/dev/wsollers/advent/year2023/day2/: Challenge2.java
src/main/java/dev/wsollers/bloom/: BitFiddle.java
src/main/resources/: sampleData.txt
src/test/java/dev/wsollers/advent/year2023/day1/: Challenge1Test.java
src/test/java/dev/wsollers/bloom/: BitFiddleTests.java
src/test/java/dev/wsollers/tests/: AllTests.java
