bazel_dep(name = "rules_jvm_external", version = "5.3")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # This line is an example coordinate, you'd copy-paste your actual dependencies here
        # from your build.gradle or pom.xml file.
        "org.seleniumhq.selenium:selenium-java:4.4.0",
        "org.slf4j:slf4j-api:2.0.9",
    "org.apache.logging.log4j:log4j-api:2.22.0",
    "org.apache.logging.log4j:log4j-core:2.22.0",
    "org.apache.logging.log4j:log4j-to-slf4j:2.16.0",
    "com.google.code.findbugs:jsr305:3.0.2",
    "com.google.errorprone:error_prone_annotations:2.11.0",
    "com.google.j2objc:j2objc-annotations:1.3",
    "org.codehaus.mojo:animal-sniffer-annotations:1.20",
    "org.checkerframework:checker-qual:3.12.0",
    "org.junit.platform:junit-platform-launcher:1.10.1",
    "org.junit.platform:junit-platform-reporting:1.10.1",
    "org.junit.jupiter:junit-jupiter-api:5.10.1",
    "org.junit.jupiter:junit-jupiter-params:5.10.1",
    "org.junit.jupiter:junit-jupiter-engine:5.10.1",
    ],
)
use_repo(maven, "maven")
